--- a/my-app/src/app/recipe-book/recipe-list/recipe-item/recipe-item.component.html
+++ b/my-app/src/app/recipe-book/recipe-list/recipe-item/recipe-item.component.html
@@ -1,9 +1,16 @@
-<a href="#" class="list-group-item clearfix">
+<a href="#"
+   class="list-group-item clearfix"
+   (click)="recipeClicked()">
   <div class="pull-left">
-    <h4 class="list-group-item-heading">Recipe Name</h4>
-    <p class="list-group-item-text">Description</p>
-    <span class="pull-right">
-      <img src="" alt="" class="img-responsive" style="max-height: 50px;">
-    </span>
+    <h4 class="list-group-item-heading">{{childRecipe.name}}</h4>
+    <p class="list-group-item-text">{{childRecipe.description}}</p>
   </div>
+  <span class="pull-right">
+      <img src="{{childRecipe.imagePath}}"
+           alt="{{childRecipe.name}}"
+           class="img-responsive"
+           style="max-height: 50px;">
+    <!-- or I could do this... -->
+    <!-- <img [src]="recipe.imgPath" alt="{{recipe.name}}" class="img-responsive" style="max-height: 50px;"> -->
+    </span>
 </a>
