--- a/my-app/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/my-app/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -10,7 +10,9 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group">
+    <!-- remember to include the selector -->
+    <!-- appDropdown adds open to the class if it's clicked/removes open if it's clicked again -->
+    <div class="btn-group" appDropdown [class]="">
       <button
         type="button"
         class="btn btn-primary dropdown-toggle">
