--- a/my-app/src/app/header/header.component.html
+++ b/my-app/src/app/header/header.component.html
@@ -10,8 +10,10 @@
         <li><a href="#" (click)="onClick('list')">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+        <!-- appDropdown adds open to the class if it's clicked/removes open if it's clicked again -->
+        <li class="dropdown" appDropdown [class]="">
+          <a href="#" class="dropdown-toggle" role="button">Manage <span
+            class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Save Data</a></li>
             <li><a href="#">Fetch Data</a></li>
