--- a/my-app/src/app/recipe-book/recipe-list/recipe-list.component.html
+++ b/my-app/src/app/recipe-book/recipe-list/recipe-list.component.html
@@ -6,6 +6,6 @@
 <hr>
 <div class="row">
   <div class="col-xs-12">
-    <app-recipe-item *ngFor="let recipe of parentRecipes" [childRecipe]="recipe" (recipeClickedEvent)="onRecipeSelected(recipe)"></app-recipe-item>
+    <app-recipe-item *ngFor="let recipe of parentRecipes" [childRecipe]="recipe"></app-recipe-item>
   </div>
 </div>
