--- a/my-app/src/app/shopping-list/shopping-list.component.html
+++ b/my-app/src/app/shopping-list/shopping-list.component.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-xs-10">
-    <app-shopping-list-edit (newIngredient)="addIngredient($event)"></app-shopping-list-edit>
+    <app-shopping-list-edit></app-shopping-list-edit>
     <hr>
     <ul class="list-group">
       <a href="#"
          class="list-group-item"
          style="cursor: pointer;"
          *ngFor="let ingredient of ingredients">
-        {{ingredient.name}} {{ingredient.amount}}
+        {{ingredient.name}} ({{ingredient.amount}})
       </a>
     </ul>
   </div>
