--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,9 +1,8 @@
-<app-header (displayRecipes)="setRecipeBool($event)" (displayList)="setListBool($event)"></app-header>
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipe-book *ngIf="this.parentRecipesBool === true"></app-recipe-book>
-      <app-shopping-list *ngIf="this.parentListBool === true"></app-shopping-list>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
