--- a/my-app/src/app/header/header.component.html
+++ b/my-app/src/app/header/header.component.html
@@ -1,22 +1,22 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Recipe Book</a>
+      <a routerLink="" class="navbar-brand">Recipe Book</a>
     </div>
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#" (click)="onClick('recipes')">Recipes</a></li>
-        <li><a href="#" (click)="onClick('list')">Shopping List</a></li>
+        <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+        <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <!-- appDropdown adds open to the class if it's clicked/removes open if it's clicked again -->
         <li class="dropdown" appDropdown [class]="">
-          <a href="#" class="dropdown-toggle" role="button">Manage <span
+          <a class="dropdown-toggle" role="button">Manage <span
             class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
+            <li><a style="cursor: pointer">Save Data</a></li>
+            <li><a style="cursor: pointer">Fetch Data</a></li>
           </ul>
         </li>
       </ul>
