--- a/my-app/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/my-app/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -1,42 +1,44 @@
-<div class="row">
-  <div class="col-xs-12">
-    <img src="{{recipe.imagePath}}" alt="{{recipe.name}}" class="img-responsive" style="max-height: 500px">
+ <div class="row">
+    <div class="col-xs-12">
+      <img src="{{recipe.imagePath}}" alt="{{recipe.name}}" class="img-responsive" style="max-height: 500px">
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <h1>{{recipe.name}}</h1>
+  <div class="row">
+    <div class="col-xs-12">
+      <h1>{{recipe.name}}</h1>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <!-- remember to include the selector -->
-    <!-- appDropdown adds open to the class if it's clicked/removes open if it's clicked again -->
-    <div class="btn-group" appDropdown [class]="">
-      <button
-        type="button"
-        class="btn btn-primary dropdown-toggle">
-        Manage Recipe <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a href="#" (click)="onClickSendToShoppingList(recipe.ingredients)">To Shopping List</a></li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+  <div class="row">
+    <div class="col-xs-12">
+      <!-- remember to include the selector -->
+      <!-- appDropdown adds open to the class if it's clicked/removes open if it's clicked again -->
+      <div class="btn-group" appDropdown [class]="">
+        <button
+          type="button"
+          class="btn btn-primary dropdown-toggle">
+          Manage Recipe <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a routerLink="/shopping-list" (click)="onClickSendToShoppingList(recipe.ingredients)">To Shopping
+            List</a>
+          </li>
+          <li><a routerLink="/recipes/{{recipe.name}}/edit">Edit Recipe</a></li>
+          <li><a href="#">Delete Recipe</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      {{recipe.description}}
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <ul class="list-group">
+        <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+          {{ingredient.amount}} {{ingredient.name}}
+        </li>
       </ul>
     </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    {{recipe.description}}
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <ul class="list-group">
-      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
-        {{ingredient.amount}} {{ingredient.name}}
-      </li>
-    </ul>
-  </div>
-</div>
