--- a/my-app/src/app/recipe-book/recipe-list/recipe-item/recipe-item.component.html
+++ b/my-app/src/app/recipe-book/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,7 @@
-<a href="#"
+<a routerLink="{{childRecipe.name}}"
    class="list-group-item clearfix"
-   (click)="recipeClicked()">
+   routerLinkActive="active"
+>
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{childRecipe.name}}</h4>
     <p class="list-group-item-text">{{childRecipe.description}}</p>
