Halfway done with section 16

--- a/my-app/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/my-app/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,65 @@
-<p>recipe-edit works!</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form [formGroup]="thisForm" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div class="col-xs-12" style="margin-bottom: 2em">
+          <button type="submit" class="btn btn-success" style="margin-right: 2em">Save</button>
+          <button type="button" class="btn btn-danger">Cancel</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" class="form-control" formControlName="name">
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="imagePath">Image URL</label>
+            <input type="text" name="imagePath" id="imagePath" class="form-control" formControlName="imageUrl">
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <img src="" class="img-responsive" alt="">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="description">Description</label>
+            <textarea type="text" name="description" id="description" rows="6" class="form-control"
+                      formControlName="description"></textarea>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="row" style="display: flex; align-items: flex-end">
+            <div class="col-xs-8">
+              <label for="ingredientName">Ingredient Name</label>
+              <input type="text" name="ingredientName" id="ingredientName" class="form-control">
+            </div>
+            <div class="col-xs-2">
+              <label for="ingredientAmount">Amount</label>
+              <input type="number" name="ingredientAmount" id="ingredientAmount" class="form-control"
+                     formControlName="amount">
+            </div>
+            <div class="col-xs-2">
+              <button class="btn btn-danger" style="">Delete</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
