--- a/my-app/src/app/header/header.component.html
+++ b/my-app/src/app/header/header.component.html
@@ -8,6 +8,7 @@
       <ul class="nav navbar-nav">
         <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
         <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
+        <li routerLinkActive="active"><a routerLink="/auth">Auth Page</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <!-- appDropdown adds open to the class if it's clicked/removes open if it's clicked again -->
