--- a/my-app/src/app/header/header.component.html
+++ b/my-app/src/app/header/header.component.html
@@ -6,13 +6,14 @@
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+        <li routerLinkActive="active" *ngIf="isLoggedIn"><a routerLink="/recipes">Recipes</a></li>
         <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
-        <li routerLinkActive="active"><a routerLink="/auth">Auth Page</a></li>
+        <li routerLinkActive="active" *ngIf="!isLoggedIn"><a routerLink="/auth">Auth Page</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li><a style="cursor: pointer" *ngIf="isLoggedIn" (click)="onLogout()">Logout</a></li>
         <!-- appDropdown adds open to the class if it's clicked/removes open if it's clicked again -->
-        <li class="dropdown" appDropdown [class]="">
+        <li class="dropdown" appDropdown [class]="" *ngIf="isLoggedIn">
           <a class="dropdown-toggle" role="button">Manage <span
             class="caret"></span></a>
           <ul class="dropdown-menu">
