--- a/my-app/src/app/header/header.component.html
+++ b/my-app/src/app/header/header.component.html
@@ -7,8 +7,8 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li routerLinkActive="active" *ngIf="isLoggedIn"><a routerLink="/recipes">Recipes</a></li>
+        <li routerLinkActive="active" *ngIf="!isLoggedIn"><a routerLink="/auth">Login</a></li>
         <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
-        <li routerLinkActive="active" *ngIf="!isLoggedIn"><a routerLink="/auth">Auth Page</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a style="cursor: pointer" *ngIf="isLoggedIn" (click)="onLogout()">Logout</a></li>
