--- a/my-app/src/app/recipe-book/recipe-list/recipe-list.component.html
+++ b/my-app/src/app/recipe-book/recipe-list/recipe-list.component.html
@@ -9,5 +9,5 @@
     <app-recipe-item *ngFor="let recipe of parentRecipes" [childRecipe]="recipe"></app-recipe-item>
   </div>
 
-  <ng-template #emptyRecipes><div class="alert alert-info">There are no recipes. Either fetch the stored recipes or add a new one.</div></ng-template>
+  <ng-template #emptyRecipes><div class="alert alert-info" style="margin: 0 1em 0 1em">There are no recipes. Either fetch the stored recipes or add a new one.</div></ng-template>
 </div>
