--- a/my-app/src/app/shared/alert/alert.component.css
+++ b/my-app/src/app/shared/alert/alert.component.css
@@ -16,7 +16,7 @@
   transform: translateX(-50%) translateY(-50%);
   background-color: #ffffff;
   z-index: 100;
-  box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 15px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0 5px 15px;
 }
 
 .alert-box p {
